Specfy full path to `rotate-backups` command

--- a/provisioning/roles/atlasview/tasks/rotate-backups.yml
+++ b/provisioning/roles/atlasview/tasks/rotate-backups.yml
@@ -1,4 +1,5 @@
 - name: Insall rotate-backups
+  become: true
   ansible.builtin.pip:
     name: rotate-backups
     state: present
@@ -16,6 +17,6 @@
     minute: "0"
     hour: "0"
     day: "*"
-    job: "rotate-backups -c {{ atlasview_rotate_backups_config }} {{ remote.atlasview_backups }} >> {{ atlasview_crontab_out }} 2>&1"
+    job: "/usr/local/bin/rotate-backups -c {{ atlasview_rotate_backups_config }} {{ remote.atlasview_backups }} >> {{ atlasview_crontab_out }} 2>&1"
     user: "{{ ansible_user }}"
     state: present
