--- a/shiny-app/DESCRIPTION
+++ b/shiny-app/DESCRIPTION
@@ -36,5 +36,9 @@ Imports:
     svglite,
     svgPanZoom
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
+LazyData: true
