--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,7 +24,9 @@ jobs:
         sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev libgit2-dev
 
     - name: Install R dependencies
-      run: Rscript -e 'install.packages(c("usethis", "desc", "gert"), lib = Sys.getenv("R_LIBS_USER"))'
+      run: |
+        cd $HOME
+        Rscript -e 'install.packages(c("usethis", "desc", "gert"), lib = Sys.getenv("R_LIBS_USER"))'
 
     - name: Bump shiny-app package version
       run: |
