--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,8 +24,13 @@ jobs:
         sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev libgit2-dev
 
     - name: Install R dependencies
-      run: |
-        Rscript -e 'install.packages(c("usethis", "desc", "gert"))'
+      uses: r-lib/actions/setup-r-dependencies@v2
+      with:
+        cache-version: 2
+        packages: |
+          any::usethis
+          any::gert
+          any::desc
 
     - name: Bump shiny-app package version
       run: |
