--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -12,7 +12,10 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
-    runs-on: ${{ matrix.config.os }}
+    runs-on: self-hosted
+    defaults:
+      run:
+        working-directory: ./shiny-app
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
