--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -12,7 +12,7 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
