--- a/provisioning/roles/atlasview/vars/main.yml
+++ b/provisioning/roles/atlasview/vars/main.yml
@@ -13,6 +13,7 @@ local:
   atlasview_env: "{{ playbook_dir }}/../.env"
 
 setup_remark42: "setup-remark42.sh"
+setup_rclone: "setup-rclone.sh"
 
 atlasview_backup_script: "{{ remote.atlasview_main }}/deployment/do-backup.sh"
 atlasview_crontab_out: "{{ atlasview_root }}/crontab.out"
