Make sure rclone and zip are installed on remote

--- a/provisioning/roles/atlasview/tasks/main.yml
+++ b/provisioning/roles/atlasview/tasks/main.yml
@@ -26,6 +26,14 @@
     state: directory
     mode: "0755"
 
+- name: Make sure rclone and zip are installed
+  ansible.builtin.apt:
+    pkg:
+      - rclone
+      - zip
+    state: latest
+    update_cache: true
+
 - name: Set up rclone syncing
   ansible.builtin.script:
     cmd: "{{ setup_rclone }}"
