Update remark submodule before applying patches
Avoids errors when the patches were already applied previously and keeps
the remark submodule up-to-date.

--- a/provisioning/roles/atlasview/tasks/main.yml
+++ b/provisioning/roles/atlasview/tasks/main.yml
@@ -4,6 +4,7 @@
     dest: "{{ remote.atlasview_main }}"
     version: "{{ atlasview_branch }}"
     force: true
+    track_submodules: true
 
 - name: Copy local atlasview-data files
   ansible.builtin.copy:
